Fix HTML encoding issues and add snowflake effect

--- a/Candy/Natal/index.html
+++ b/Candy/Natal/index.html
@@ -56,7 +56,7 @@
 
         <div class="menu-entry">
           <img
-            src="img/Torta de limão trufada.jpeg"
+            src="img/Torta de limão Trufada.jpeg"
             alt="Torta de Limão Trufada"
             class="item-photo"
           />
@@ -367,3 +367,4 @@
     </script>
   </body>
 </html>
+
