--- a/Candy/Natal/index.html
+++ b/Candy/Natal/index.html
@@ -20,7 +20,7 @@
         <h2>Sobre Nós</h2>
         <img src="img/sobrenos.jpeg" alt="Foto da equipe AG Candy House" />
         <p>
-          Microempreendedoras, que começaram no ramo dos doces de pote por acaso
+          Microempreendedoras, que começaram no ramo de sobremesa no pote por acaso
           e descobriram neles um refúgio e uma paixão! Buscando cada dia inovar,
           mas sem perder os traços de "casa", que trazem o aconchego e sabor
           para nossos clientes!
@@ -183,7 +183,7 @@
           />
           <div class="menu-item">
             <span class="item-name">Rabanada Tradicional</span>
-            <span class="item-price">R$8,00</span>
+            <span class="item-price">R$6,00</span>
           </div>
           <a
             href="https://wa.me/5521993805003?text=Ol%C3%A1!%20Quero%20reservar:%20Rabanada%20Tradicional%20%E2%80%94%20R%248,00"
@@ -244,7 +244,7 @@
             class="item-photo"
           />
           <div class="menu-item">
-            <span class="item-name">Palha de Café</span>
+            <span class="item-name">Mimo de Café</span>
             <span class="item-price">R$140,00</span>
           </div>
           <a
@@ -364,3 +364,4 @@
     </script>
   </body>
 </html>
+
